--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "author": "JacderZhang",
   "license": "MIT",
   "dependencies": {
     "crypto-js": "^4.0.0",
-    "kramed": "^0.5.6"
+    "kramed": "^0.5.6",
+    "yaml": "^1.10.2"
   }
 }
